--- a/index.html
+++ b/index.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="index.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <title>Frontend Mentor | NFT preview card component</title>
+  </head>
+  <body>
+    <main>
+      <div class="nft-card">
+        <div class="nft-product-image">
+          <img class="nft-image" src="./images/image-equilibrium.jpg" alt="" />
+          <img class="nft-view" src="./images/icon-view.svg" alt="" />
+        </div>
+        <a class="nft-title">Equilibrium #3429 </a>
+        <p class="nft-description">Our Equilibrium collection promotes balance and calm.</p>
+        <div class="nft-offer-details">
+          <div class="nft-offer">
+            <img class="icon-ethereum" src="./images/icon-ethereum.svg" alt="" />
+            <p>0.041 ETH</p>
+          </div>
+          <div class="nft-offer-duration">
+            <img class="icon-clock" src="./images/icon-clock.svg" alt="" />
+            <p>3 days left</p>
+          </div>
+        </div>
+        <div class="seperator" />
+        <div class="nft-creator">
+          <img class="icon-avatar" src="./images/image-avatar.png" alt="" />
+          <div class="nft-creator-text">
+            <p>Creation of</p>
+            <a class="nft-creator-name">Jules Wyvern</a>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        <p>Challenge by</p>
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+        <p>Coded by</p>
+        <a href="#">DirtyRonin</a>
+      </div>
+    </footer>
+  </body>
 </html>
